fixing dark mode

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,7 @@ header {
   .site-title a {
     text-transform: uppercase;
     color: #207983;
+    
   }
 }
 a {
@@ -23,8 +24,8 @@ a {
 
 .night-mode-btn {
   align-self: flex-end;
-  width: 200px;
-  margin: 20px;
+  width: 160px;
+  margin: 10px 10px;
   border-radius: 10px;
   text-transform: uppercase;
   background-color: #ececec;
